Preloader Transition removed

--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
                         </ul>
                   </div>
             </div>
-            <div class="page-transition__red"></div>
+            <!-- <div class="page-transition__red"></div>
             <div class="page-transition__black"></div>
             <div class="transition__logo"> <img src="./logo.png" alt="logo" class="webLogo"/></div>
             <div class="home_page">
                   <img src="https://unsplash.it/1608/900" alt="" class="image2 img">
                   <h1>Hello</h1>
-            </div>
+            </div> -->
              
       </div>
       
