--- a/home.html
+++ b/home.html
@@ -6,19 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Live Legacy || Home</title>
     <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="cursor.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="cursor"></div>
     <div class="container">
         <div class="header_top">
             <img src="./logo.png" alt="logo" class="webLogo"/>
             <div class="button" onclick="toggle()">Menu</div>
         </div>
-
-        
-
     </div>
     <div class="menu">
         <div class="button" onclick="togglec()">Close</div>
@@ -43,5 +42,6 @@
     </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
 <script src="./home.js"></script>
+<script src="./cursor.js"></script>
 </body>
 </html>
