--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
       <!-- stylesheet -->
       <link rel="stylesheet" href="style.css">
-
+      <link rel="stylesheet" href="cursor.css">
       <!-- google fonts -->
       <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap" rel="stylesheet">
       
@@ -26,7 +26,7 @@
 </head>
 <body>
       
-
+      <div class="cursor"></div>
       <div class="page_transition">
             <div class="preloader__screen">
                   <div class="container">
@@ -96,5 +96,6 @@
 
       <!-- js -->
       <script src="index.js"></script>
+      <script src="./cursor.js"></script>
 </body>
 </html>
