--- a/home.html
+++ b/home.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+
+<link href="https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="cursor"></div>
@@ -20,17 +22,20 @@
         </div>
     </div>
     <div class="menu">
-        <div class="button" onclick="togglec()">Close</div>
+        <div class="menu_top">
+            <div class="button" onclick="togglec()">Close</div>
+        </div>
+        
 
         <ul class="ul">
             <li class="li1 li"><a href="#">Home</a></li>
             <li class="li2 li"><a href="#">About</a></li>
             <li class="li3 li"><a href="#">Services</a></li>
             <li class="li4 li"><a href="#">Contact</a></li>
-            <div class="bg1 bg"></div>
+            <!-- <div class="bg1 bg"></div>
             <div class="bg2 bg"></div>
             <div class="bg3 bg"></div>
-            <div class="bg4 bg"></div>
+            <div class="bg4 bg"></div> -->
         </ul>
         <div class="social">
             <ul>
