--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
 
-<link href="https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="cursor"></div>
@@ -23,6 +23,7 @@
     </div>
     <div class="menu">
         <div class="menu_top">
+            <img src="./logo.png" alt="logo" class="webLogo"/>
             <div class="button" onclick="togglec()">Close</div>
         </div>
         
