--- a/home.html
+++ b/home.html
@@ -7,10 +7,13 @@
     <title>Live Legacy || Home</title>
     <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="cursor.css">
+    <link rel="stylesheet" href="slider.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link  rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap"/>
+    <link rel="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css"/>
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
-
+<!--    <meta http-equiv="refresh" content="0; url=https://dev-livelegacy.netlify.app/">-->
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -18,15 +21,15 @@
     <div class="container">
         <div class="header_top">
             <img src="./logo.png" alt="logo" class="webLogo"/>
-            <div class="button" onclick="toggle()">Menu</div>
+            <div class="button cursorEvent" onclick="toggle()">Menu</div>
         </div>
     </div>
     <div class="menu">
         <div class="menu_top">
             <img src="./logo.png" alt="logo" class="webLogo"/>
-            <div class="button" onclick="togglec()">Close</div>
+            <div class="button cursorEvent" onclick="togglec()">Close</div>
         </div>
-        
+
 
         <ul class="ul">
             <li class="li1 li"><a href="#">Home</a></li>
@@ -46,8 +49,108 @@
         </ul>
         </div>
     </div>
+    <div class="home__slider app">
+
+        <div class="cardList">
+            <button class="cardList__btn btn btn--left">
+                <div class="icon">
+                    <svg>
+                        <use xlink:href="#arrow-left"></use>
+                    </svg>
+                </div>
+            </button>
+
+            <div class="cards__wrapper">
+                <div class="card current--card">
+                    <div class="card__image">
+                        <img src="https://source.unsplash.com/Z8dtTatMVMw" alt="" />
+                    </div>
+                </div>
+
+                <div class="card next--card">
+                    <div class="card__image">
+                        <img src="https://source.unsplash.com/9dmycbFE7mQ" alt="" />
+                    </div>
+                </div>
+
+                <div class="card previous--card">
+                    <div class="card__image">
+                        <img src="https://source.unsplash.com/m7K4KzL5aQ8" alt="" />
+                    </div>
+                </div>
+            </div>
+
+            <button class="cardList__btn btn btn--right">
+                <div class="icon">
+                    <svg>
+                        <use xlink:href="#arrow-right"></use>
+                    </svg>
+                </div>
+            </button>
+        </div>
+
+        <div class="infoList">
+            <div class="info__wrapper">
+                <div class="info current--info">
+                    <h1 class="text name">Highlands</h1>
+                    <h4 class="text location">Scotland</h4>
+                    <p class="text description">The mountains are calling</p>
+                </div>
+
+                <div class="info next--info">
+                    <h1 class="text name">Machu Pichu</h1>
+                    <h4 class="text location">Peru</h4>
+                    <p class="text description">Adventure is never far away</p>
+                </div>
+
+                <div class="info previous--info">
+                    <h1 class="text name">Chamonix</h1>
+                    <h4 class="text location">France</h4>
+                    <p class="text description">Let your dreams come true</p>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="app__bg">
+            <div class="app__bg__image current--image">
+                <img src="https://source.unsplash.com/Z8dtTatMVMw" alt="" />
+            </div>
+            <div class="app__bg__image next--image">
+                <img src="https://source.unsplash.com/9dmycbFE7mQ" alt="" />
+            </div>
+            <div class="app__bg__image previous--image">
+                <img src="https://source.unsplash.com/m7K4KzL5aQ8" alt="" />
+            </div>
+        </div>
+    </div>
+
+    <div class="loading__wrapper">
+        <div class="loader--text">Loading...</div>
+        <div class="loader">
+            <span></span>
+        </div>
+    </div>
+
+
+    <svg class="icons" style="display: none;">
+        <symbol id="arrow-left" xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'>
+            <polyline points='328 112 184 256 328 400'
+                      style='fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;stroke-width:48px' />
+        </symbol>
+        <symbol id="arrow-right" xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'>
+            <polyline points='184 112 328 256 184 400'
+                      style='fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;stroke-width:48px' />
+        </symbol>
+    </svg>
+    </div>
+
+    </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
-<script src="./home.js"></script>
+<script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
+
+    <script src="./home.js"></script>
 <script src="./cursor.js"></script>
+<script src="./slider.js"></script>
 </body>
 </html>
