--- a/home.html
+++ b/home.html
@@ -33,9 +33,9 @@
 
         <ul class="ul">
             <li class="li1 li"><a href="#">Home</a></li>
-            <li class="li2 li"><a href="#">About</a></li>
-            <li class="li3 li"><a href="#">Services</a></li>
-            <li class="li4 li"><a href="#">Contact</a></li>
+            <li class="li2 li"><a href="#">Memorial Products</a></li>
+            <li class="li3 li"><a href="#">Testimonials</a></li>
+            <li class="li4 li"><a href="#">Contact Us</a></li>
             <!-- <div class="bg1 bg"></div>
             <div class="bg2 bg"></div>
             <div class="bg3 bg"></div>
@@ -63,19 +63,19 @@
             <div class="cards__wrapper">
                 <div class="card current--card">
                     <div class="card__image">
-                        <img src="https://source.unsplash.com/Z8dtTatMVMw" alt="" />
+                        <img src="./images/memorial_plaque.png" alt="" />
                     </div>
                 </div>
 
                 <div class="card next--card">
                     <div class="card__image">
-                        <img src="https://source.unsplash.com/9dmycbFE7mQ" alt="" />
+                        <img src="./images/cremation.png" alt="" />
                     </div>
                 </div>
 
                 <div class="card previous--card">
                     <div class="card__image">
-                        <img src="https://source.unsplash.com/m7K4KzL5aQ8" alt="" />
+                        <img src="./images/pet_plaque.png" alt="" />
                     </div>
                 </div>
             </div>
@@ -92,21 +92,21 @@
         <div class="infoList">
             <div class="info__wrapper">
                 <div class="info current--info">
-                    <h1 class="text name">Highlands</h1>
-                    <h4 class="text location">Scotland</h4>
-                    <p class="text description">The mountains are calling</p>
+                    <h1 class="text name">Memorial Products</h1>
+                    <h4 class="text location">Memorial Plaque</h4>
+                    <p class="text description">Stop leaving your loved ones behind</p>
                 </div>
 
                 <div class="info next--info">
-                    <h1 class="text name">Machu Pichu</h1>
-                    <h4 class="text location">Peru</h4>
-                    <p class="text description">Adventure is never far away</p>
+                    <h1 class="text name">Memorial Products</h1>
+                    <h4 class="text location">Cremation Plaque</h4>
+                    <p class="text description">The live legacy Memorial frame is for your loved ones that have already passed</p>
                 </div>
 
                 <div class="info previous--info">
-                    <h1 class="text name">Chamonix</h1>
-                    <h4 class="text location">France</h4>
-                    <p class="text description">Let your dreams come true</p>
+                    <h1 class="text name">Memorial Products</h1>
+                    <h4 class="text location">Pet memorial Plaque</h4>
+                    <p class="text description">To remember someone extra special....</p>
                 </div>
             </div>
         </div>
@@ -114,13 +114,13 @@
 
         <div class="app__bg">
             <div class="app__bg__image current--image">
-                <img src="https://source.unsplash.com/Z8dtTatMVMw" alt="" />
+                <img src="./images/memorial_plaque.png" alt="" />
             </div>
             <div class="app__bg__image next--image">
-                <img src="https://source.unsplash.com/9dmycbFE7mQ" alt="" />
+                <img src="./images/cremation.png" alt="" />
             </div>
             <div class="app__bg__image previous--image">
-                <img src="https://source.unsplash.com/m7K4KzL5aQ8" alt="" />
+                <img src="./images/pet_plaque.png" alt="" />
             </div>
         </div>
     </div>
