--- a/home.html
+++ b/home.html
@@ -5,20 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Live Legacy || Home</title>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="menu.css">
     <link rel="stylesheet" href="cursor.css">
     <link rel="stylesheet" href="slider.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link  rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap"/>
     <link rel="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css"/>
-<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
-<!--    <meta http-equiv="refresh" content="0; url=https://dev-livelegacy.netlify.app/">-->
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div class="cursor"></div>
-    <div class="container">
+    <div class="menuContainer">
         <div class="header_top">
             <img src="./logo.png" alt="logo" class="webLogo"/>
             <div class="button cursorEvent" onclick="toggle()">Menu</div>
@@ -32,14 +32,9 @@
 
 
         <ul class="ul">
-            <li class="li1 li"><a href="#">Home</a></li>
-            <li class="li2 li"><a href="#">Memorial Products</a></li>
+            <li class="li1 li"><a href="./home.html">Home</a></li>
             <li class="li3 li"><a href="#">Testimonials</a></li>
             <li class="li4 li"><a href="#">Contact Us</a></li>
-            <!-- <div class="bg1 bg"></div>
-            <div class="bg2 bg"></div>
-            <div class="bg3 bg"></div>
-            <div class="bg4 bg"></div> -->
         </ul>
         <div class="social">
             <ul>
@@ -73,9 +68,9 @@
                     </div>
                 </div>
 
-                <div class="card previous--card">
-                    <div class="card__image">
-                        <img src="./images/pet_plaque.png" alt="" />
+                <div class="card previous--card" onclick="petRedirect()">
+                    <div class="card__image" >
+                        <img src="./images/pet_plaque.png"  alt="" />
                     </div>
                 </div>
             </div>
@@ -146,11 +141,11 @@
     </div>
 
     </div>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
 <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
-
-    <script src="./home.js"></script>
 <script src="./cursor.js"></script>
 <script src="./slider.js"></script>
+    <script src="./home.js"></script>
 </body>
 </html>
