Pet Plaque inner page

--- a/InnerPages/PetMemorialPlaque.html
+++ b/InnerPages/PetMemorialPlaque.html
@@ -14,8 +14,7 @@
     <link rel="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-
-    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
 </head>
@@ -65,13 +64,13 @@
         </div>
     </div>
 </section>
-<section class="banner__next__content">
+<section class="banner__next__content" id="banner__next__content">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
                     <h2 id="banner__next__header">Lorem Ipsum is simply
                         dummy text</h2>
-                    <h1 class="border__bottom"></h1>
+                    <h1 class="border__bottom" id="border__bottom"></h1>
                 </div>
                 <div class="col-md-6">
                     <p id="banner__next__text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
@@ -84,10 +83,56 @@
         </div>
 </section>
 <section class="banner__two">
-
+</section>
+<section class="banner__next__content" id="banner__two__next__content">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <h2 id="banner__two__next__header">Lorem Ipsum is simply
+                    dummy text</h2>
+                <h1 class="border__bottom" id="border__bottom__two"></h1>
+            </div>
+            <div class="col-md-6">
+                <p id="banner__two__next__text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
+                    unknown printer took a galley of type and scrambled
+                    it to make a type specimen book.
+                    It has survived not only five centuries,
+                    but also the leap into electronic typesetting, remaining essentially unchanged. </p>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="banner__three">
+</section>
+<section class="banner__next__content" id="banner__three__next__content">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <h2 id="banner__three__next__header">Lorem Ipsum is simply
+                    dummy text</h2>
+                <h1 class="border__bottom" id="border__bottom__three"></h1>
+            </div>
+            <div class="col-md-6">
+                <p id="banner__three__next__text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
+                    unknown printer took a galley of type and scrambled
+                    it to make a type specimen book.
+                    It has survived not only five centuries,
+                    but also the leap into electronic typesetting, remaining essentially unchanged. </p>
+            </div>
+        </div>
+    </div>
 </section>
 
+<section class="next__page">
+    <div class="image__container">
+        <div class="image__url">
+<!--            <img src="../images/CremationPlaque/banner.png">-->
+            <a href="../home.html">Next Product</a>
+        </div>
 
+    </div>
+    <i class="fa fa-arrow-right arrow__right"></i>
+</section>
 
 <!--JAVASCRIPT-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
