--- a/InnerPages/PetMemorialPlaque.html
+++ b/InnerPages/PetMemorialPlaque.html
@@ -7,7 +7,7 @@
     <title>Live Legacy || Pet Memorial Plaque</title>
     <link rel="stylesheet" href="../menu.css">
     <link rel="stylesheet" href="../cursor.css">
-    <link rel="stylesheet" href="./PetMemorial.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link  rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap"/>
@@ -131,7 +131,6 @@
         </div>
 
     </div>
-    <i class="fa fa-arrow-right arrow__right"></i>
 </section>
 
 <!--JAVASCRIPT-->
@@ -139,7 +138,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/ScrollTrigger.min.js"></script>
 <script src="../cursor.js"></script>
-<script src="./PetMemorial.js"></script>
+<script src="./page.js"></script>
 <script src="../home.js"></script>
 
 <!-- jQuery library -->
