--- a/home.html
+++ b/home.html
@@ -56,13 +56,13 @@
             </button>
 
             <div class="cards__wrapper">
-                <div class="card current--card">
+                <div class="card current--card" onclick="memorialRedirect()">
                     <div class="card__image">
                         <img src="./images/memorial_plaque.png" alt="" />
                     </div>
                 </div>
 
-                <div class="card next--card">
+                <div class="card next--card" onclick="cremationRedirect()">
                     <div class="card__image">
                         <img src="./images/cremation.png" alt="" />
                     </div>
