--- a/products/MemorialPlaque.html
+++ b/products/MemorialPlaque.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Live Legacy || Pet Memorial Plaque</title>
+    <title>Live Legacy || Memorial Plaque</title>
     <link rel="stylesheet" href="../menu.css">
     <link rel="stylesheet" href="../cursor.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style3.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link  rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap"/>
@@ -52,7 +52,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h1>Pet Memorial Plaque</h1>
+                        <h1>Memorial Plaque</h1>
                         <div class="chevron__bottom">
                             <div class="chevron"></div>
                             <div class="chevron"></div>
@@ -65,22 +65,22 @@
     </div>
 </section>
 <section class="banner__next__content" id="banner__next__content">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <h2 id="banner__next__header">Lorem Ipsum is simply
-                        dummy text</h2>
-                    <h1 class="border__bottom" id="border__bottom"></h1>
-                </div>
-                <div class="col-md-6">
-                    <p id="banner__next__text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-                        unknown printer took a galley of type and scrambled
-                        it to make a type specimen book.
-                        It has survived not only five centuries,
-                        but also the leap into electronic typesetting, remaining essentially unchanged. </p>
-                </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <h2 id="banner__next__header">Lorem Ipsum is simply
+                    dummy text</h2>
+                <h1 class="border__bottom" id="border__bottom"></h1>
+            </div>
+            <div class="col-md-6">
+                <p id="banner__next__text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
+                    unknown printer took a galley of type and scrambled
+                    it to make a type specimen book.
+                    It has survived not only five centuries,
+                    but also the leap into electronic typesetting, remaining essentially unchanged. </p>
             </div>
         </div>
+    </div>
 </section>
 <section class="banner__two">
 </section>
@@ -126,8 +126,7 @@
 <section class="next__page">
     <div class="image__container">
         <div class="image__url">
-<!--            <img src="../images/CremationPlaque/banner.png">-->
-            <a href="./CremationPlaque.html">Next Product</a>
+            <a href="./PetMemorialPlaque.html">Next Product</a>
         </div>
 
     </div>
@@ -138,7 +137,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/ScrollTrigger.min.js"></script>
 <script src="../cursor.js"></script>
-<script src="./page.js"></script>
+<script src="./page3.js"></script>
 <script src="../home.js"></script>
 
 <!-- jQuery library -->
