--- a/products/CremationPlaque.html
+++ b/products/CremationPlaque.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Live Legacy || Pet Memorial Plaque</title>
+    <title>Live Legacy || Cremation Plaque</title>
     <link rel="stylesheet" href="../menu.css">
     <link rel="stylesheet" href="../cursor.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link  rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap"/>
@@ -52,7 +52,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h1>Pet Memorial Plaque</h1>
+                        <h1>Cremation Plaque</h1>
                         <div class="chevron__bottom">
                             <div class="chevron"></div>
                             <div class="chevron"></div>
@@ -127,7 +127,7 @@
     <div class="image__container">
         <div class="image__url">
 <!--            <img src="../images/CremationPlaque/banner.png">-->
-            <a href="./CremationPlaque.html">Next Product</a>
+            <a href="./MemorialPlaque.html">Next Product</a>
         </div>
 
     </div>
@@ -138,7 +138,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/ScrollTrigger.min.js"></script>
 <script src="../cursor.js"></script>
-<script src="./page.js"></script>
+<script src="./page2.js"></script>
 <script src="../home.js"></script>
 
 <!-- jQuery library -->
