Content Upload for inner pages

--- a/home.html
+++ b/home.html
@@ -38,9 +38,9 @@
         </ul>
         <div class="social">
             <ul>
-            <li class="social-li"><a href="#">facebook</a></li>
-            <li class="social-li"><a href="#">instagram</a></li>
-            <li class="social-li"><a href="#">twitter</a></li>
+<!--            <li class="social-li"><a href="#">facebook</a></li>-->
+            <li class="social-li"><a href="https://www.instagram.com/livelegacyofficial/" target="_blank">instagram</a></li>
+<!--            <li class="social-li"><a href="#">twitter</a></li>-->
         </ul>
         </div>
     </div>
