--- a/products/MemorialPlaque.html
+++ b/products/MemorialPlaque.html
@@ -42,9 +42,9 @@
             </ul>
             <div class="social">
                 <ul>
-                    <li class="social-li"><a href="#">facebook</a></li>
-                    <li class="social-li"><a href="#">instagram</a></li>
-                    <li class="social-li"><a href="#">twitter</a></li>
+<!--                    <li class="social-li"><a href="#">facebook</a></li>-->
+                    <li class="social-li"><a href="https://www.instagram.com/livelegacyofficial/" target="_blank">instagram</a></li>
+<!--                    <li class="social-li"><a href="#">twitter</a></li>-->
                 </ul>
             </div>
         </div>
@@ -68,16 +68,17 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <h2 id="banner__next__header">Lorem Ipsum is simply
-                    dummy text</h2>
+                <h2 id="banner__next__header">Live Legacy Memorial Frame</h2>
                 <h1 class="border__bottom" id="border__bottom"></h1>
             </div>
             <div class="col-md-6">
-                <p id="banner__next__text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-                    unknown printer took a galley of type and scrambled
-                    it to make a type specimen book.
-                    It has survived not only five centuries,
-                    but also the leap into electronic typesetting, remaining essentially unchanged. </p>
+                <p id="banner__next__text">The live legacy Memorial frame
+                    is for your loved ones that have already passed.
+                    Pick your favorite image of your loved ones and then
+                    send us all the pictures, videos, and memories that you'd like to save and share.<br>
+                    We'll imbed them all into the technology of your frame.
+                    So forever those digital images will be available for you.
+                </p>
             </div>
         </div>
     </div>
@@ -88,16 +89,13 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <h2 id="banner__two__next__header">Lorem Ipsum is simply
-                    dummy text</h2>
+                <h2 id="banner__two__next__header">Live Legacy Time Portal Video </h2>
                 <h1 class="border__bottom" id="border__bottom__two"></h1>
             </div>
             <div class="col-md-6">
-                <p id="banner__two__next__text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-                    unknown printer took a galley of type and scrambled
-                    it to make a type specimen book.
-                    It has survived not only five centuries,
-                    but also the leap into electronic typesetting, remaining essentially unchanged. </p>
+                <p id="banner__two__next__text">Pre plan today for the live legacy time portal video
+                    and at live legacies we want to give you a chance to say all those things
+                    you meant to say; you want to say, and you're planning on saying before you leave this earth.</p>
             </div>
         </div>
     </div>
@@ -108,16 +106,13 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <h2 id="banner__three__next__header">Lorem Ipsum is simply
-                    dummy text</h2>
+                <h2 id="banner__three__next__header">Pre-Recorded Messages</h2>
                 <h1 class="border__bottom" id="border__bottom__three"></h1>
             </div>
             <div class="col-md-6">
-                <p id="banner__three__next__text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-                    unknown printer took a galley of type and scrambled
-                    it to make a type specimen book.
-                    It has survived not only five centuries,
-                    but also the leap into electronic typesetting, remaining essentially unchanged. </p>
+                <p id="banner__three__next__text">Take some time with live legacies,
+                    plan your prerecorded message, and upon passing live legacies will include it in your memorial
+                    and or cremation frame as a Time Capsule your message today to be seen 10,20,30,50 years from now.</p>
             </div>
         </div>
     </div>
