--- a/products/CremationPlaque.html
+++ b/products/CremationPlaque.html
@@ -42,9 +42,9 @@
             </ul>
             <div class="social">
                 <ul>
-                    <li class="social-li"><a href="#">facebook</a></li>
-                    <li class="social-li"><a href="#">instagram</a></li>
-                    <li class="social-li"><a href="#">twitter</a></li>
+<!--                    <li class="social-li"><a href="#">facebook</a></li>-->
+                    <li class="social-li"><a href="https://www.instagram.com/livelegacyofficial/" target="_blank">instagram</a></li>
+<!--                    <li class="social-li"><a href="#">twitter</a></li>-->
                 </ul>
             </div>
         </div>
@@ -68,16 +68,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h2 id="banner__next__header">Lorem Ipsum is simply
-                        dummy text</h2>
+                    <h2 id="banner__next__header">True Meaning Of Legacy</h2>
                     <h1 class="border__bottom" id="border__bottom"></h1>
                 </div>
                 <div class="col-md-6">
-                    <p id="banner__next__text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-                        unknown printer took a galley of type and scrambled
-                        it to make a type specimen book.
-                        It has survived not only five centuries,
-                        but also the leap into electronic typesetting, remaining essentially unchanged. </p>
+                    <p id="banner__next__text">Legacy is the word people use often as it relates to wealth and inheritance.
+                        However, the true legacy of a life are the memories that you leave behind for your loved ones and friends.
+                    </p>
                 </div>
             </div>
         </div>
@@ -88,16 +85,13 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <h2 id="banner__two__next__header">Lorem Ipsum is simply
-                    dummy text</h2>
+                <h2 id="banner__two__next__header">We've Got It All</h2>
                 <h1 class="border__bottom" id="border__bottom__two"></h1>
             </div>
             <div class="col-md-6">
-                <p id="banner__two__next__text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-                    unknown printer took a galley of type and scrambled
-                    it to make a type specimen book.
-                    It has survived not only five centuries,
-                    but also the leap into electronic typesetting, remaining essentially unchanged. </p>
+                <p id="banner__two__next__text">Live Legacy will provide everything from your cremation arrangements,
+                    to having the remains embedded to the back of a picture frame;
+                    to be able to travel with you wherever you live on this wonderful planet.</p>
             </div>
         </div>
     </div>
@@ -108,16 +102,13 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <h2 id="banner__three__next__header">Lorem Ipsum is simply
-                    dummy text</h2>
+                <h2 id="banner__three__next__header">Share Your Memories With Us</h2>
                 <h1 class="border__bottom" id="border__bottom__three"></h1>
             </div>
             <div class="col-md-6">
-                <p id="banner__three__next__text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-                    unknown printer took a galley of type and scrambled
-                    it to make a type specimen book.
-                    It has survived not only five centuries,
-                    but also the leap into electronic typesetting, remaining essentially unchanged. </p>
+                <p id="banner__three__next__text">Using near field Communications Technology Live legacies
+                    will capture all the images and videos, even your mom's favorite recipe,
+                    all in the tap of the picture frame and it will load on your phone.</p>
             </div>
         </div>
     </div>
