--- a/products/PetMemorialPlaque.html
+++ b/products/PetMemorialPlaque.html
@@ -42,9 +42,9 @@
             </ul>
             <div class="social">
                 <ul>
-                    <li class="social-li"><a href="#">facebook</a></li>
-                    <li class="social-li"><a href="#">instagram</a></li>
-                    <li class="social-li"><a href="#">twitter</a></li>
+<!--                    <li class="social-li"><a href="#">facebook</a></li>-->
+                    <li class="social-li"><a href="https://www.instagram.com/livelegacyofficial/" target="_blank">instagram</a></li>
+<!--                    <li class="social-li"><a href="#">twitter</a></li>-->
                 </ul>
             </div>
         </div>
@@ -68,16 +68,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h2 id="banner__next__header">Lorem Ipsum is simply
-                        dummy text</h2>
+                    <h2 id="banner__next__header">Your Memories!!!</h2>
                     <h1 class="border__bottom" id="border__bottom"></h1>
                 </div>
                 <div class="col-md-6">
-                    <p id="banner__next__text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-                        unknown printer took a galley of type and scrambled
-                        it to make a type specimen book.
-                        It has survived not only five centuries,
-                        but also the leap into electronic typesetting, remaining essentially unchanged. </p>
+                    <p id="banner__next__text">The Live legacies pet platform will
+                        allow you to take your pet’s image and
+                        send us all the fun videos and the times you had with your furry friend. </p>
                 </div>
             </div>
         </div>
@@ -88,16 +85,11 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <h2 id="banner__two__next__header">Lorem Ipsum is simply
-                    dummy text</h2>
+                <h2 id="banner__two__next__header">Near Field Communication Frames</h2>
                 <h1 class="border__bottom" id="border__bottom__two"></h1>
             </div>
             <div class="col-md-6">
-                <p id="banner__two__next__text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-                    unknown printer took a galley of type and scrambled
-                    it to make a type specimen book.
-                    It has survived not only five centuries,
-                    but also the leap into electronic typesetting, remaining essentially unchanged. </p>
+                <p id="banner__two__next__text">And again, with our Near Field Communication frames we will load all those images.</p>
             </div>
         </div>
     </div>
@@ -108,16 +100,13 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <h2 id="banner__three__next__header">Lorem Ipsum is simply
-                    dummy text</h2>
+                <h2 id="banner__three__next__header">One Tap Away</h2>
                 <h1 class="border__bottom" id="border__bottom__three"></h1>
             </div>
             <div class="col-md-6">
-                <p id="banner__three__next__text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-                    unknown printer took a galley of type and scrambled
-                    it to make a type specimen book.
-                    It has survived not only five centuries,
-                    but also the leap into electronic typesetting, remaining essentially unchanged. </p>
+                <p id="banner__three__next__text">That pet that brought so much happiness and love
+                    to your family will remain with you forever in your heart
+                    and in your home and it's a tap away and now it’s in your phone.</p>
             </div>
         </div>
     </div>
