--- a/home.html
+++ b/home.html
@@ -88,19 +88,19 @@
             <div class="info__wrapper">
                 <div class="info current--info">
                     <h1 class="text name">Memorial Products</h1>
-                    <h4 class="text location">Memorial Plaque</h4>
+                    <h4 class="text location back__1">Memorial Plaque</h4>
                     <p class="text description">Stop leaving your loved ones behind</p>
                 </div>
 
                 <div class="info next--info">
                     <h1 class="text name">Memorial Products</h1>
-                    <h4 class="text location">Cremation Plaque</h4>
+                    <h4 class="text location back__2">Cremation Plaque</h4>
                     <p class="text description">The live legacy Memorial frame is for your loved ones that have already passed</p>
                 </div>
 
                 <div class="info previous--info">
                     <h1 class="text name">Memorial Products</h1>
-                    <h4 class="text location">Pet memorial Plaque</h4>
+                    <h4 class="text location back__3">Pet memorial Plaque</h4>
                     <p class="text description">To remember someone extra special....</p>
                 </div>
             </div>
