--- a/index.html
+++ b/index.html
@@ -44,8 +44,6 @@
                       <!-- <ion-icon name="git-compare"></ion-icon>FilesFiddle -->
                       <img src="./logo.png" alt="logo" class="webLogo"/>
                   </div>
-                  <!-- <div class="contact">GET IN TOUCH</div>
-                  <div class="menu"><ion-icon name="options"></ion-icon></div> -->
                   <div class="header">
                           <h1 class="ml7" id="title">            
                               <span class="text-wrapper">
@@ -53,19 +51,17 @@
                               </span>
                           </h1>
                   </div>
-                       <!-- <div class="bottom-text">+0.00001db</div> -->
-
                   <div class="copyright">© 2021 by Live Legacy. All rights reserved.</div>
 
 
-                  <div class="media">
-                        <ul>
-                              <li><ion-icon name="logo-facebook"></ion-icon></li>
-                              <li><ion-icon name="logo-instagram"></ion-icon></li>
-                              <li><ion-icon name="logo-twitter"></ion-icon></li>
-                              <li><ion-icon name="logo-youtube"></ion-icon></li>
-                        </ul>
-                  </div>
+<!--                  <div class="media">-->
+<!--                        <ul>-->
+<!--                              <li><ion-icon name="logo-facebook"></ion-icon></li>-->
+<!--                              <li><ion-icon name="logo-instagram"></ion-icon></li>-->
+<!--                              <li><ion-icon name="logo-twitter"></ion-icon></li>-->
+<!--                              <li><ion-icon name="logo-youtube"></ion-icon></li>-->
+<!--                        </ul>-->
+<!--                  </div>-->
             </div>
       </div>
       
