--- a/home.html
+++ b/home.html
@@ -95,7 +95,7 @@
                 <div class="info next--info">
                     <h1 class="text name">Memorial Products</h1>
                     <h4 class="text location back__2">Cremation Plaque</h4>
-                    <p class="text description">The live legacy Memorial frame is for your loved ones that have already passed</p>
+                    <p class="text description" style="text-align: center">The live legacy Memorial frame is<br> for your loved ones that have already passed</p>
                 </div>
 
                 <div class="info previous--info">
