--- a/home.html
+++ b/home.html
@@ -33,8 +33,8 @@
 
         <ul class="ul">
             <li class="li1 li"><a href="./home.html">Home</a></li>
-            <li class="li3 li"><a href="#">Testimonials</a></li>
-            <li class="li4 li"><a href="#">Contact Us</a></li>
+            <li class="li3 li"><a href="./testimonial.html">Testimonials</a></li>
+            <li class="li4 li"><a href="./contact-us.html">Contact Us</a></li>
         </ul>
         <div class="social">
             <ul>
