Contact form responsive

--- a/contact-us.html
+++ b/contact-us.html
@@ -65,11 +65,11 @@
         </div>
     </section>
 
-    <section class="contact__content">
+    <section class="contact__content" id="contact__content">
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <div class="contact__description">
+                    <div class="contact__description" id="contact__description">
                         <h1>Get Started Here</h1>
                         <h2>Contact Us:</h2>
                         <p>(858) 558-5650</p>
@@ -82,7 +82,7 @@
 
                 </div>
                 <div class="col-md-8">
-                    <form class="contact__form">
+                    <form class="contact__form" id="contact__form">
                         <div class="row">
                             <div class="col-md-6">
                                 <input type="text" required name="name" placeholder="Name..."/>
