Logo and font change

--- a/contact-us.html
+++ b/contact-us.html
@@ -14,6 +14,7 @@
     <link rel="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
@@ -25,13 +26,13 @@
     <section class="contact__banner" id="pet__banner">
         <div class="menuContainer">
             <div class="header_top">
-                <img src="./logo.png" alt="logo" class="webLogo"/>
+                <img src="./images/logo/livelegacy.png" alt="logo" class="webLogo"/>
                 <div class="button cursorEvent" onclick="toggle()">Menu</div>
             </div>
         </div>
         <div class="menu">
             <div class="menu_top">
-                <img src="./logo.png" alt="logo" class="webLogo"/>
+                <img src="./images/logo/livelegacy.png" alt="logo" class="webLogo"/>
                 <div class="button cursorEvent" onclick="togglec()">Close</div>
             </div>
 
