--- a/home.html
+++ b/home.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link  rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap"/>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
@@ -20,7 +21,7 @@
     <div class="cursor"></div>
     <div class="menuContainer">
         <div class="header_top">
-            <img src="./logo.png" alt="logo" class="webLogo"/>
+            <img src="./images/logo/livelegacy.png" alt="logo" class="webLogo"/>
             <div class="button cursorEvent" onclick="toggle()">Menu</div>
         </div>
     </div>
