--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <link rel="stylesheet" href="cursor.css">
       <!-- google fonts -->
       <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap" rel="stylesheet">
-      
+      <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
       <!-- icons -->
       <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 
@@ -42,7 +42,7 @@
                   </div>
                   <div class="logo">
                       <!-- <ion-icon name="git-compare"></ion-icon>FilesFiddle -->
-                      <img src="./logo.png" alt="logo" class="webLogo"/>
+                      <img src="./images/logo/livelegacy.png" alt="logo" class="webLogo"/>
                   </div>
                   <div class="header">
                           <h1 class="ml7" id="title">            
